# atracker

./: CLAUDE.md  README.md  TODO.md  atracker.service  benchmark_regex.py  db_query.py  list_uncategorized.py  open_db.py  plan.md  pyproject.toml  run_tests.py  sync_db.py  test_perf.py
.agents/rules/: run-project.md
.agents/workflows/: auto-categorize.md
.temp/rust/: Cargo.toml
.temp/rust/src/: api.rs  db.rs  main.rs  watcher.rs
android/: CR_SQLITE_DOWNLOAD.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: gradle-daemon-jvm.properties
atracker-android/: CLAUDE.md  build.gradle.kts  gradle.properties  settings.gradle.kts
atracker-android/.agents/: gap.md
atracker-android/app/: build.gradle.kts
atracker-android/app/src/main/: AndroidManifest.xml
atracker-android/app/src/main/res/drawable/: chip_off.xml  chip_on.xml  header_gradient.xml
atracker-android/gradle/: libs.versions.toml
atracker-android/gradle/wrapper/: gradle-wrapper.properties
dashboard/: app.js  index.html  style.css
docs/: android.md  api.md  architecture.md
gnome-extension/: install.sh
gnome-extension/atracker@local/: extension.js  metadata.json
scripts/: dedup_events.py
src/atracker/: __init__.py  api.py  cli.py  config.py  db.py  lock.py  sync.py  watcher.py  watcher_windows.py
tests/: conftest.py  test_api.py  test_config.py  test_security_cors.py
(+97 files in other folders)
