[package]
name = "atracker"
version = "0.1.0"
edition = "2021"
description = "Local-first activity watcher & tracker"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
zbus = "5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
anyhow = "1"
